--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^3.1.0",
     "await": "^0.2.6",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "ethereumjs-tx": "^2.1.0",
     "express": "^4.17.1",
     "hooked-web3-provider": "^1.0.0",
